<resources>
    <string name="app_name">SharpshooterApp</string>
    <string name="title_activity_first_login">FirstLoginActivity</string>
    <string name="login">Hello!  Welcome to Sharpshooter! </string>
    <string name="real_name"></string>
    <string name="action_settings">Settings</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="frontalSelfie">Your Number is: </string>
    <string name="number">11111</string>
    <string name="start">Click the button below to start the game! </string>
    <string name="congrats"> Congratulations on winning the game! </string>
    <string name="lost"> Sorry, </string>
    <string name="person"> You lost! </string>
    <string name="targety"> Your target is: </string>
    <string name="ready"> Ready, set, ... </string>
    <string name="blank"> Kieran </string>
    <string name="almostReady"> The game is about to start! </string>
</resources>
