<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lisacampbell.sharpshooterapp.Loser">

    <!-- TODO: Update blank fragment layout -->
    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />
    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/lost_game"
        tools:context="com.example.lisacampbell.sharpshooterapp.StartGame"
        android:background="@color/darky"
        android:layoutMode="clipBounds"
        android:paddingTop="0dp"
        android:paddingLeft="10dp">

        <!-- TODO: Update blank fragment layout -->
        <TextView android:layout_width="230dp" android:layout_height="68dp"
            android:text="@string/lost"
            android:id="@+id/labely"
            android:textSize="32dp"
            android:layout_gravity="center_horizontal"
            android:textColor="@color/backgroundycolor"/>

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/endgame"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:background="@color/kill"
            android:text="New Game"
            android:clickable="true"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="130dp" />

        <TextView android:layout_width="230dp" android:layout_height="237dp"
            android:text="@string/person"
            android:id="@+id/labelit"
            android:textSize="32dp"
            android:layout_gravity="center"
            android:textColor="@color/backgroundycolor"/>
    </FrameLayout>
</FrameLayout>
