<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.lisacampbell.sharpshooterapp.Ready">

    <!-- TODO: Update blank fragment layout -->
    <TextView android:layout_width="match_parent" android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/start_game"
        tools:context="com.example.lisacampbell.sharpshooterapp.StartGame"
        android:background="@color/darky"
        android:layoutMode="clipBounds"
        android:paddingTop="30dp"
        android:paddingLeft="10dp">

        <!-- TODO: Update blank fragment layout -->

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/readyBtn"
            android:layout_width="134dp"
            android:layout_height="wrap_content"
            android:background="@color/kill"
            android:text="Go!"
            android:textSize="20dp"
            android:clickable="true"
            android:layout_gravity="center_horizontal|bottom"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:paddingBottom="130dp" />

        <TextView android:layout_width="230dp" android:layout_height="101dp"
            android:text="@string/ready"
            android:id="@+id/ready"
            android:textSize="35dp"
            android:layout_gravity="center"
            android:textColor="@color/backgroundycolor"/>

        <TextView android:layout_width="230dp" android:layout_height="101dp"
            android:text="@string/almostReady"
            android:id="@+id/almostReady"
            android:textSize="35dp"
            android:layout_gravity="center_horizontal|top"
            android:textColor="@color/backgroundycolor"/>

    </FrameLayout>

</FrameLayout>
