
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/content_frame"
    tools:context="com.example.lisacampbell.sharpshooterapp.BeforePhoto"
    android:background="@color/darky"
    android:layoutMode="clipBounds"
    android:paddingTop="30dp"
    android:paddingLeft="10dp">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/screen"
        android:layout_gravity="center"
        android:paddingLeft="16dp"
        android:paddingRight="16dp" >


    <!-- TODO: Update blank fragment layout -->

        <TextView android:text="@string/targety" android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:textSize="25dp"
            android:id="@+id/target"
            android:textColor="@color/backgroundycolor"
            android:typeface="normal"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:layout_below="@+id/numberID"
            android:layout_centerHorizontal="true" />

        <TextView android:text="@string/blank" android:layout_width="wrap_content"
            android:layout_height="75dp"
            android:textSize="35dp"
            android:id="@+id/targetName"
            android:textColor="@color/backgroundycolor"
            android:typeface="normal"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:textStyle="bold"
            android:layout_below="@+id/target"
            android:layout_alignEnd="@+id/cameraBtn" />
    <com.gc.materialdesign.views.ButtonRectangle
        android:id="@+id/cameraBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/kill"
        android:text="Kill"
        android:textSize="15dp"
        android:clickable="true"
        android:paddingTop="10dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

        <com.gc.materialdesign.views.ButtonRectangle
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/kill"
            android:text="Check Status"
            android:textSize="15dp"
            android:clickable="true"
            android:paddingTop="10dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:text=" Enter Number to Kill Here"
        android:textCursorDrawable="@null"
        android:ems="10"
        android:id="@+id/killnum"
        android:background="@color/buttoncolor"
        android:layout_gravity="center"
        android:layout_above="@+id/cameraBtn"
        android:layout_alignStart="@+id/target" />

    <TextView android:text="@string/number" android:layout_width="122dp"
        android:layout_height="123dp"
        android:textSize="75dp"
        android:id="@+id/numberID"
        android:textColor="@color/backgroundycolor"
        android:typeface="normal"
        android:layout_gravity="center_horizontal"
        android:textAlignment="center"
        android:textStyle="bold"
        android:layout_below="@+id/status"
        android:layout_alignEnd="@+id/killnum"
        android:layout_alignStart="@+id/status" />

    <!--<ImageView-->
        <!--android:src="@drawable/ic_camera_alt_black_24dp.png"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="fill_parent"-->
        <!--/>-->

    </RelativeLayout>
</FrameLayout>
